// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionHeader correctly applies the theme context className 1`] = `
<div
  className="flex-header orion-fusion-theme customClassName"
  title="Action Header"
>
  <div
    className="flex-end"
  >
    <div
      className="left-buttons orion-fusion-theme"
    >
      <IconButton
        aria-describedby="terra-action-header-maximize-button-41"
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-40"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-41"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-42"
        text="Terra.actionHeader.minimize.description"
      />
    </div>
  </div>
  <div
    className="flex-fill"
  />
  <div
    className="flex-end"
  >
    <div
      className="right-buttons orion-fusion-theme"
    >
      <IconButton
        aria-describedby="terra-action-header-close-button-40"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  </div>
</div>
`;

exports[`ActionHeader should render a default action header 1`] = `
<ActionHeaderContainer
  endContent={null}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-1"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-2"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-3"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
/>
`;

exports[`ActionHeader should render an action header with back and close buttons and title 1`] = `
<ActionHeaderContainer
  closeButtonA11yLabel="Close Modal"
  endContent={
    <div
      className="right-buttons"
    >
      <IconButton
        aria-describedby="terra-action-header-close-button-13"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <IconButton
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Go Back"
        type="button"
        variant="utility"
      />
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-13"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-14"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-15"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with back button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <IconButton
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.back"
        type="button"
        variant="utility"
      />
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-7"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-8"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-9"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with close button and title 1`] = `
<ActionHeaderContainer
  endContent={
    <div
      className="right-buttons"
    >
      <IconButton
        aria-describedby="terra-action-header-close-button-10"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  level={1}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-10"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-11"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-12"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with custom button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-19"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-20"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-21"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
  title="Action Header"
>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    onClick={[Function]}
    text="Custom Button"
    type="button"
    variant="neutral"
  />
</ActionHeaderContainer>
`;

exports[`ActionHeader should render an action header with level three header element and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={3}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-16"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-17"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-18"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with maximize button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  maximizeButtonA11yLabel="maximize modal"
  startContent={
    <div
      className="left-buttons"
    >
      <IconButton
        aria-describedby="terra-action-header-maximize-button-26"
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-25"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-26"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-27"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with minimize button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  minimizeButtonA11yLabel="minimize modal"
  startContent={
    <div
      className="left-buttons"
    >
      <IconButton
        aria-describedby="terra-action-header-minimize-button-30"
        className="header-button minimize-button"
        data-terra-action-header="minimize-button"
        icon={
          <span
            className="header-icon minimize"
          />
        }
        iconType="informative"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.minimize"
        type="button"
        variant="utility"
      />
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-28"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-29"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-30"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with multiple custom buttons and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-22"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-23"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-24"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
  title="Action Header"
>
  <span>
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
  </span>
</ActionHeaderContainer>
`;

exports[`ActionHeader should render an action header with next and previous buttons and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <IconButton
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Go to Previous Page"
          type="button"
          variant="utility"
        />
        <IconButton
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Go to Next Page"
          type="button"
          variant="utility"
        />
      </div>
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-31"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-32"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-33"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title and heading level 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <React.Fragment>
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-close-button-4"
        text="Terra.actionHeader.close.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-maximize-button-5"
        text="Terra.actionHeader.maximize.description"
      />
      <VisuallyHiddenText
        aria-hidden={true}
        id="terra-action-header-minimize-button-6"
        text="Terra.actionHeader.minimize.description"
      />
    </React.Fragment>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled next button, and disabled previous button 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <IconButton
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <IconButton
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Go to Next Page"
          type="button"
          variant="utility"
        />
      </div>
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-34"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-35"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-36"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled previous button, and disabled next button 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <IconButton
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Go to Previous Page"
          type="button"
          variant="utility"
        />
        <IconButton
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          iconType="informative"
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
      <React.Fragment>
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-close-button-37"
          text="Terra.actionHeader.close.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-maximize-button-38"
          text="Terra.actionHeader.maximize.description"
        />
        <VisuallyHiddenText
          aria-hidden={true}
          id="terra-action-header-minimize-button-39"
          text="Terra.actionHeader.minimize.description"
        />
      </React.Fragment>
    </div>
  }
  title="Action Header"
/>
`;
